# rsi-trading-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vibe-coding-development-plan.md
backtest/: epoch_01_2026-03-22T15-49-07Z.md  epoch_01_2026-03-22T16-48-46Z.md  epoch_02_2026-03-22T15-49-17Z.md  epoch_02_2026-03-22T16-49-18Z.md  epoch_03_2026-03-22T16-49-48Z.md  epoch_04_2026-03-22T16-50-25Z.md  epoch_05_2026-03-22T15-49-51Z.md  epoch_05_2026-03-22T16-50-59Z.md
backtest/20256-03-22-15-49-07/: epoch_03_2026-03-22T15-49-28Z.md  epoch_04_2026-03-22T15-49-40Z.md
backtest/20256-03-22-16-09-36/: epoch_01_2026-03-22T16-09-35Z.md  epoch_02_2026-03-22T16-09-47Z.md  epoch_03_2026-03-22T16-09-58Z.md  epoch_04_2026-03-22T16-10-10Z.md  epoch_05_2026-03-22T16-10-21Z.md
btc_self_improve_agent/: __init__.py  agent.py  main.py  memory.py  observability.py  planner.py  reflection.py  research_agents.py  tools.py
data/: btc_usdt_15m_2023-01-01_2025-12-31_analysis.json  btc_usdt_15m_2023-01-01_2025-12-31_analysis.md
docs/: developing-ai-agents-from-scratch-v2.md  developing-ai-agents-from-scratch.md  vibe-coding-development-plan-v2.md  vibe-coding-development-plan.md
news/: btc_news_2023-01-01_2025-12-31.json  btc_news_2023-01-01_2025-12-31_analysis.json  btc_news_2023-01-01_2025-12-31_analysis.md
tests/: test_memory.py  test_planner_reflection.py  test_research_agents.py  test_tools.py
